<resources>
    <string name="app_name">12306_</string>
    <string name="ticket">车票预订</string>
    <string name="hotel">商旅服务</string>
    <string name="order">订单查询</string>
    <string name="late">正晚点</string>
    <string name="careserv">温馨服务</string>
    <string name="food">餐饮·特产</string>
    <string name="gogo">铁路畅行</string>
    <string name="startData">出发日期</string>
    <string name="StratTime">出发时间</string>
    <string name="xibie">席别</string>
</resources>
