<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_1">

    <!-- TODO: Update blank fragment layout -->
    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="this is first fragment" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_late_point"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/tip" />

                <TextView
                    android:id="@+id/tv_late_point"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:text="@string/late" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_careserv"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:src="@drawable/service" />

                <TextView
                    android:id="@+id/tv_careserv"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:text="@string/careserv" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_food"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:src="@drawable/eat" />

                <TextView
                    android:id="@+id/tv_food"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:text="@string/food" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_gogo"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_weight="1"
                    android:src="@drawable/car" />

                <TextView
                    android:id="@+id/tv_gogo"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:textSize="10sp"
                    android:text="@string/gogo" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:background="@drawable/line2"
            android:orientation="vertical">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_startPint"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="出发地点"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="10dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:src="@drawable/change" />

                <TextView
                    android:id="@+id/tv_destination"
                    android:layout_width="80dp"
                    android:layout_height="60dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="目的地"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_startData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/startData" />

            <TextView
                android:id="@+id/tv_startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/StratTime" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_ChooseData"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="5.7月"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_ChooseTime"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="0:00~24:00"
                android:textSize="18sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/xibie" />

                <TextView
                    android:id="@+id/setlevel"
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:gravity="center"
                    android:text="不限"
                    android:textSize="18dp" />

            </LinearLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="学生" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                >

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="高铁/动车" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="普通车" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="兑换车次" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/line3" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Button"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_find"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="查询" />

    </LinearLayout>

</FrameLayout>
